re-introduce kbm-fwd
