# openapi.yaml
@@ -56,7 +56,7 @@ components:
         $schema:
           description: A URL to the JSON Schema for this object.
           examples:
-            - http://127.0.0.1:42155/schemas/Config.json
+            - http://127.0.0.1:43941/schemas/Config.json
           format: uri
           readOnly: true
           type: string
@@ -65,7 +65,7 @@ components:
         controllerEmulation:
           $ref: "#/components/schemas/ControllerEmulation"
         keyboardMouseEmulation:
-          $ref: "#/components/schemas/KeyboardMouseEmulation"
+          $ref: "#/components/schemas/KbMEmuation"
         runMisc:
           $ref: "#/components/schemas/RunMisc"
         steam:
@@ -139,7 +139,7 @@ components:
         $schema:
           description: A URL to the JSON Schema for this object.
           examples:
-            - http://127.0.0.1:42155/schemas/EnforceInputConfig.json
+            - http://127.0.0.1:43941/schemas/EnforceInputConfig.json
           format: uri
           readOnly: true
           type: string
@@ -166,7 +166,7 @@ components:
         $schema:
           description: A URL to the JSON Schema for this object.
           examples:
-            - http://127.0.0.1:42155/schemas/ErrorModel.json
+            - http://127.0.0.1:43941/schemas/ErrorModel.json
           format: uri
           readOnly: true
           type: string
@@ -213,7 +213,7 @@ components:
         $schema:
           description: A URL to the JSON Schema for this object.
           examples:
-            - http://127.0.0.1:42155/schemas/InitialLaunch.json
+            - http://127.0.0.1:43941/schemas/InitialLaunch.json
           format: uri
           readOnly: true
           type: string
@@ -222,7 +222,7 @@ components:
       required:
         - is_initial_launch
       type: object
-    KeyboardMouseEmulation:
+    KbMEmuation:
       additionalProperties: false
       properties:
         KeyboardMouseEmulation:
@@ -237,7 +237,7 @@ components:
         $schema:
           description: A URL to the JSON Schema for this object.
           examples:
-            - http://127.0.0.1:42155/schemas/OpenConfiguratorArgs.json
+            - http://127.0.0.1:43941/schemas/OpenConfiguratorArgs.json
           format: uri
           readOnly: true
           type: string
@@ -254,7 +254,7 @@ components:
         $schema:
           description: A URL to the JSON Schema for this object.
           examples:
-            - http://127.0.0.1:42155/schemas/OverlayChanged.json
+            - http://127.0.0.1:43941/schemas/OverlayChanged.json
           format: uri
           readOnly: true
           type: string
@@ -293,7 +293,7 @@ components:
         $schema:
           description: A URL to the JSON Schema for this object.
           examples:
-            - http://127.0.0.1:42155/schemas/ShowHideUI.json
+            - http://127.0.0.1:43941/schemas/ShowHideUI.json
           format: uri
           readOnly: true
           type: string
@@ -326,7 +326,7 @@ components:
         $schema:
           description: A URL to the JSON Schema for this object.
           examples:
-            - http://127.0.0.1:42155/schemas/SteamAndCefStatus.json
+            - http://127.0.0.1:43941/schemas/SteamAndCefStatus.json
           format: uri
           readOnly: true
           type: string
@@ -368,7 +368,7 @@ components:
         $schema:
           description: A URL to the JSON Schema for this object.
           examples:
-            - http://127.0.0.1:42155/schemas/VIIPERStatus.json
+            - http://127.0.0.1:43941/schemas/VIIPERStatus.json
           format: uri
           readOnly: true
           type: string
@@ -383,7 +383,7 @@ components:
         $schema:
           description: A URL to the JSON Schema for this object.
           examples:
-            - http://127.0.0.1:42155/schemas/VersionInfo.json
+            - http://127.0.0.1:43941/schemas/VersionInfo.json
           format: uri
           readOnly: true
           type: string
@@ -433,7 +433,7 @@ components:
       type: object
 info:
   title: SISR API
-  version: v0.4.2-134-ga0f118c
+  version: v0.4.2-135-g6c75ab9
 openapi: 3.1.0
 paths:
   /api/v1/config:
@@ -772,4 +772,4 @@ paths:
           description: Error
 servers:
   - description: SISR API
-    url: http://127.0.0.1:42155
+    url: http://127.0.0.1:43941
